[package]
name = "high-performace-blockchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.43", features = ["tcp-tokio", "dns-tokio"] }
ring = "0.16.20"
log = "0.4"
env_logger = "0.9"