[package]
name = "high-performace-blockchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = "0.22"
rand = "0.8"
log = "0.4"
env_logger = "0.9"
sha2 = "0.10"
clap = { version = "4.1", features = ["derive"] }